--- a/style.css
+++ b/style.css
@@ -33,3 +33,10 @@ a {
   /* color: #fff; */
   text-decoration: none;
 }
+
+.container {
+  border: 1px solid #000;
+  text-align: center;
+  padding: 5px;
+  margin: 15px;
+}
